--- a/index.html
+++ b/index.html
@@ -63,12 +63,39 @@
                     <div class="about-me">
                         <h2>Biography</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore mollitia vel illo cum minima, fugit esse quia hic voluptas accusantium illum enim sunt incidunt quas doloremque, numquam, animi temporibus exercitationem!</p>
-                        <a href="#" class="btn-reverse">Hire Me</a>
+                        <a href="#" class="btn-reverse">Download The CV</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="latest-work-section">
+        <div class="container">
+            <h2>My Latest Work</h2>
+            <div class="row">
+                <div class="col-4">
+                    <div class="work-img">
+                        <a href="#"><img src="images/work-1.png" alt="peter" ></a>
+                    </div>
+                </div>
+                <!-- work --> 
+                <div class="col-4">
+                    <div class="work-img">
+                        <a href="#"><img src="images/work-2.jpg" alt="peter" ></a>
+                    </div>
+                </div>
+                <!-- work --> 
+                <div class="col-4">
+                    <div class="work-img">
+                        <a href="#"><img src="images/work-3.jpg" alt="peter" ></a>
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </section>
+
+ 
 
 </body>
 </html>
