--- a/index.html
+++ b/index.html
@@ -95,6 +95,31 @@
         </div>
     </section>
 
+
+    <section class="client-section">
+        <div class="container">
+            <h2>What Client are Say</h2>
+            <div class="row">
+                <div class="col-8">
+                    <h4>Bruce moccy</h4>
+                    <span>Founder & CEO, Alies</span>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum illo, laboriosam neque explicabo rerum nemo."</p>
+
+                    <div class="mail-box">
+                        <p>Leave me a message in the </p>
+                        <h1>codexcode4@gmail.com</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <footer>
+        <p>Codexcode institute &copy; 2020 All right reserved</p>
+    </footer>
+
  
 
 </body>
